--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "babel-node src/server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --watch",
-    "dev": "webpack && yarn start"
+    "dev": "concurrently \"yarn start\" \"yarn webpack\""
   },
   "repository": {
     "type": "git",
