--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "dotenv": "^4.0.0",
     "express": "^4.16.0",
     "mongoose": "^4.11.13",
     "react": "^16.0.0",
