--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "css-loader": "^0.28.7",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
