--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "webpack.config.js",
   "scripts": {
     "start": "babel-node src/server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --reporter spec",
     "webpack": "webpack --watch",
-    "dev": "concurrently \"yarn start\" \"yarn webpack\""
+    "dev": "concurrently \"yarn start\" \"yarn webpack\"",
+    "lint": "eslint **/*.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,9 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "dotenv": "^4.0.0",
+    "eslint-config-airbnb": "^16.0.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "express": "^4.16.0",
     "mongoose": "^4.11.13",
     "react": "^16.0.0",
@@ -38,7 +42,12 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
     "css-loader": "^0.28.7",
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb-base": "^12.0.2",
+    "eslint-plugin-import": "^2.7.0",
+    "mocha": "^4.0.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
