--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "bulma": "^0.6.0",
     "dotenv": "^4.0.0",
     "eslint-config-airbnb": "^16.0.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
