--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "express": "^4.16.0",
+    "moment": "^2.19.1",
     "mongoose": "^4.11.13",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
