--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.18.2",
+    "bulma": "^0.6.1",
     "dotenv": "^4.0.0",
     "eslint-config-airbnb": "^16.0.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
