--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "babel-node src/server/index.js",
     "test": "mocha --reporter spec",
     "webpack": "webpack --watch",
-    "dev": "concurrently \"yarn start\" \"yarn webpack\"",
+    "dev": "(yarn webpack &) && yarn start ",
     "lint": "eslint **/*.js"
   },
   "repository": {
@@ -26,7 +26,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.18.2",
