--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.16.0",
     "moment": "^2.19.1",
     "mongoose": "^4.11.13",
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
