--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGO_URI=mongodb://labsadmin:ajyH5jHqdtZrvCEK@ds155934.mlab.com:55934/penncentral
+MONGO_URI=mongodb://admin:labs@ds127436.mlab.com:27436/pennbasics
