--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "mocha --reporter spec",
     "webpack": "webpack --watch",
     "dev": "(yarn webpack &) && yarn start ",
-    "lint": "eslint ./src/**/"
+    "lint": "eslint ./src/**/",
+    "lint-fix": "eslint ./src/**/ --fix"
   },
   "repository": {
     "type": "git",
@@ -33,10 +34,10 @@
     "body-parser": "^1.18.2",
     "bulma": "^0.6.1",
     "dotenv": "^4.0.0",
-    "eslint-config-airbnb": "^16.0.0",
     "express": "^4.16.0",
     "moment": "^2.19.1",
     "mongoose": "^4.11.13",
+    "prop-types": "^15.6.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
@@ -48,11 +49,11 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "css-loader": "^0.28.7",
-    "eslint": "^4.18.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^7.6.1",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "mocha": "^4.0.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
