--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.0",
     "lodash": "^4.17.11",
-    "moment": "^2.19.1",
+    "moment": "^2.22.2",
     "mongoose": "^4.11.13",
     "prop-types": "^15.6.2",
     "react": "^16.0.0",
@@ -47,9 +47,11 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "styled-components": "^4.0.2",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.8.0",
     "chai": "^4.1.2",
     "css-loader": "^0.28.7",
     "eslint": "^5.5.0",
@@ -58,7 +60,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
     "mocha": "^4.0.1",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.9.4",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "webpack": "^3.6.0",
