--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets" : ["react", "stage-2", "env"],
+  "presets" : ["@babel/preset-react", "@babel/preset-env"],
   "plugins": ["babel-plugin-styled-components"]
 }
