--- a/package.json
+++ b/package.json
@@ -23,16 +23,13 @@
   },
   "homepage": "https://github.com/pennlabs/penncentral#readme",
   "dependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "async": "^2.6.1",
     "axios": "^0.17.1",
-    "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-loader": "^8.0.4",
     "body-parser": "^1.18.2",
     "bulma": "^0.6.1",
     "dotenv": "^4.0.0",
@@ -41,8 +38,8 @@
     "moment": "^2.22.2",
     "mongoose": "^4.11.13",
     "prop-types": "^15.6.2",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
