--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.8.0",
+    "babel-polyfill": "^6.26.0",
     "chai": "^4.1.2",
     "css-loader": "^0.28.7",
     "eslint": "^5.5.0",
