--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mongoose": "^4.11.13",
     "prop-types": "^15.6.2",
     "react": "^16.3.0",
+    "react-device-detect": "^1.6.2",
     "react-dom": "^16.3.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
