--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "styled-components": "^4.0.2",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "style-loader": "^0.19.0"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.8.0",
@@ -63,7 +64,6 @@
     "mocha": "^4.0.1",
     "node-sass": "^4.9.4",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
     "webpack": "^3.6.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.19.1"
