--- a/package.json
+++ b/package.json
@@ -32,13 +32,18 @@
     "axios": "^0.17.1",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-styled-components": "^1.8.0",
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
     "bulma": "^0.6.1",
+    "css-loader": "^0.28.7",
+    "dateformat": "^3.0.3",
     "dotenv": "^4.0.0",
     "express": "^4.16.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "mongoose": "^4.11.13",
+    "node-sass": "^4.9.4",
     "prop-types": "^15.6.2",
     "react": "^16.3.0",
     "react-device-detect": "^1.6.2",
@@ -47,15 +52,11 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
     "styled-components": "^4.0.2",
     "uuid": "^3.1.0",
-    "style-loader": "^0.19.0",
-    "node-sass": "^4.9.4",
-    "sass-loader": "^6.0.6",
-    "webpack": "^3.6.0",
-    "babel-plugin-styled-components": "^1.8.0",
-    "babel-polyfill": "^6.26.0",
-    "css-loader": "^0.28.7"
+    "webpack": "^3.6.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
