--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
     "bulma": "^0.6.1",
+    "cheerio": "^1.0.0-rc.3",
     "css-loader": "^0.28.7",
     "dateformat": "^3.0.3",
     "dotenv": "^4.0.0",
@@ -52,6 +53,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "request": "^2.88.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "styled-components": "^4.0.2",
