--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "style-loader": "^0.19.0",
     "styled-components": "^4.3.2",
     "uuid": "^3.3.3",
+    "web-push": "^3.3.5",
     "webpack": "^3.6.0"
   },
   "devDependencies": {
