--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "styled-components": "^4.3.2",
     "uuid": "^3.3.3",
     "web-push": "^3.3.5",
-    "webpack": "^3.6.0"
+    "webpack": "^4.39.3",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -69,6 +70,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "mocha": "^4.0.1",
+    "webpack-cli": "^3.3.7",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.25.0"
   }
