adding penn dining slugs

--- a/src/server/database/venue_id_mappings.json
+++ b/src/server/database/venue_id_mappings.json
@@ -7,13 +7,13 @@
   "Mark's Café": 640,
   "Accenture Café": 641,
   "Joe's Café": 642,
-  "Lauder House": 1442,
+  "Lauder College House": 1442,
   "McClelland Express": 747,
   "Beefsteak": 1441,
   "1920 Gourmet Grocer": 1057,
   "Tortas Frontera at the ARCH": 1058,
   "1920 Starbucks": 1163,
-  "Lauder House Retail": 1731,
+  "LCH Retail": 1731,
   "Pret a Manger MBA": 1732,
   "Pret a Manger Locust Walk": 1733
 }
