--- a/package.json
+++ b/package.json
@@ -66,10 +66,13 @@
     "chai": "^4.1.2",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "mocha": "^4.0.1",
+    "prettier": "^1.18.2",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.25.0"
   }
