--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "css-loader": "^0.28.7",
     "dotenv": "^4.0.0",
     "express": "^4.17.1",
+    "http-status-codes": "^1.3.2",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^4.13.19",
