--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^16.9.0",
     "react-device-detect": "^1.7.5",
     "react-dom": "^16.9.0",
+    "react-ga": "^2.7.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
