Updated seedFoodTrucksInfo.js to fix an error in parsing. Verified that MongoDB Atlas receives data correctly. Added seeding script to package.json. Fixed an error in db.js

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack -p && node src/server/index.js",
     "seedSpaces": "source env.sh && node src/server/database/seedSpacesInfo.js",
+    "seedFoodTrucks": "source env.sh && node src/server/database/seedFoodTrucksInfo.js",
     "test": "mocha --reporter spec",
     "webpack": "webpack --watch",
     "webpack-prod": "webpack -p",
