--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "moment": "^2.24.0",
     "mongoose": "^4.13.19",
     "node-sass": "^4.12.0",
+    "passport": "^0.4.0",
+    "passport-oauth": "^1.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.9.0",
     "react-device-detect": "^1.7.5",
