--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,73 +30,33 @@ jobs:
           name: Lint
           command: |
             yarn lint
-  build:
-    executor: docker-publisher
-    steps:
-      - checkout
-      - setup_remote_docker
-      - run:
-          name: Build Docker image
-          command: |
-            docker build -t $IMAGE_NAME:latest .
-      - run:
-          name: Archive Docker image
-          command: docker save -o image.tar $IMAGE_NAME
-      - persist_to_workspace:
-          root: .
-          paths:
-            - ./image.tar
-  publish:
-    executor: docker-publisher
-    steps:
-      - attach_workspace:
-          at: /tmp/workspace
-      - setup_remote_docker
-      - run:
-          name: Load archived Docker image
-          command: docker load -i /tmp/workspace/image.tar
-      - run:
-          name: Publish Docker Image to Docker Hub
-          command: |
-            echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-            IMAGE_TAG="0.0.${CIRCLE_BUILD_NUM}"
-            docker tag $IMAGE_NAME:latest $IMAGE_NAME:$IMAGE_TAG
-            docker push $IMAGE_NAME:latest
-            docker push $IMAGE_NAME:$IMAGE_TAG
   deploy:
     working_directory: ~/pennlabs
     docker:
-      - image: circleci/buildpack-deps:buster
+      - image: pennlabs/labs-helm
     steps:
       - checkout
       - run:
-          command: |
-            echo -e "Host apps.pennlabs.org\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
-      - run:
-          name: Deploy master to Dokku
-          command: |
-            git push dokku@apps.pennlabs.org:basics master
+          name: Deploy to k8s
+          command: /deploy.sh
 workflows:
   version: 2
   build-and-deploy:
     jobs:
       - test
-      - build:
+      - docker/publish:
+          name: publish
           requires:
             - test
-          filters:
-            branches:
-              only: master
-      - publish:
-          requires:
-            - build
+          image: $IMAGE_NAME
+          tag: $CIRCLE_SHA1
           context: docker-publish
-          filters:
-            branches:
-              only: master          
       - deploy:
           requires:
             - publish
+          context: k8s-deploy
           filters:
             branches:
-              only: master
+              only:
+                - master
+                - staging
