--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "css-loader": "^0.28.7",
     "dotenv": "^4.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "http-status-codes": "^1.3.2",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
