--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^16.9.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^5.1.2",
+    "react-tooltip": "^3.11.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "request": "^2.88.0",
