Add icarus deploy and remove old chart

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,13 @@
 version: 2.1
 orbs:
-  docker: circleci/docker@0.5.13
+  docker: circleci/docker@0.5.19
+  deploy: pennlabs/deploy@0.0.2
 
 branch-filters: &branch-filters
   filters:
     branches:
       only:
         - master
-        - staging
 
 jobs:
   test:
@@ -34,15 +34,6 @@ jobs:
           name: Lint
           command: |
             yarn lint
-  deploy:
-    working_directory: ~/pennlabs
-    docker:
-      - image: pennlabs/labs-helm
-    steps:
-      - checkout
-      - run:
-          name: Deploy to k8s
-          command: /deploy.sh
 
 workflows:
   version: 2
@@ -50,15 +41,14 @@ workflows:
     jobs:
       - test
       - docker/publish:
-          name: publish
           requires:
             - test
           image: pennlabs/pennbasics
-          tag: $CIRCLE_SHA1
+          tag: $CIRCLE_SHA1,latest
           context: docker-publish
           <<: *branch-filters
-      - deploy:
+      - deploy/deploy:
           requires:
-            - publish
+            - docker/publish
           context: k8s-deploy
           <<: *branch-filters
