--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,20 +20,20 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "yarn.lock" }}
+          key: dependency-cache-{{ checksum "package-lock.json" }}
       - run:
           name: Install dependencies
           command: |
-            yarn install
+            npm install
       - save_cache:
-          key: dependency-cache-{{ checksum "yarn.lock" }}
+          key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - ./node_modules
-            - ~/.cache/yarn
+            - ~/.cache/npm
       - run:
           name: Lint
           command: |
-            yarn lint
+            npm run lint
 
 workflows:
   version: 2
