--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Application built to allow University of Pennsylvania students to access information and services on one platform.",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "webpack -p && node src/server/index.js",
+    "start": "node src/server/index.js",
     "seedSpaces": "source env.sh && node src/server/database/seedSpacesInfo.js",
     "test": "mocha --reporter spec",
     "webpack": "webpack --watch",
     "webpack-prod": "webpack -p",
-    "dev": "source env.sh && concurrently \"yarn webpack\" \"node src/server/index.js\"",
+    "dev": "source env.sh && concurrently \"npm run webpack\" \"node src/server/index.js\"",
     "lint": "eslint ./src/**/",
     "lint-server": "eslint ./src/server",
     "lint-fix": "eslint ./src/**/ --fix"
