Move port variable from vault to values.yaml

--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -5,6 +5,9 @@ applications:
   - name: basics
     image: pennlabs/pennbasics
     secret: basics
+    extraEnv:
+      - name: PORT
+        value: 80
     ingress:
       hosts:
         - host: pennbasics.com
