--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "Application built to allow University of Pennsylvania students to access information and services on one platform.",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "webpack -p && node src/server/index.js",
     "seedSpaces": "source env.sh && node src/server/database/seedSpacesInfo.js",
     "test": "mocha --reporter spec",
     "webpack": "webpack --watch",
     "webpack-prod": "webpack -p",
-    "dev": "source env.sh && concurrently \"npm run webpack\" \"node src/server/index.js\"",
     "lint": "eslint ./src/**/",
     "lint-server": "eslint ./src/server",
-    "lint-fix": "eslint ./src/**/ --fix"
+    "lint-fix": "eslint ./src/**/ --fix",
+    "dev": "source env.sh && concurrently \"node index.js\"",
+    "build": "next build",
+    "start": "source env.sh NODE_ENV=production node index.js"
   },
   "repository": {
     "type": "git",
@@ -38,17 +39,17 @@
     "body-parser": "^1.19.0",
     "bulma": "^0.6.1",
     "cheerio": "^1.0.0-rc.3",
-    "css-loader": "^0.28.7",
     "dotenv": "^4.0.0",
     "express": "^4.17.1",
     "http-status-codes": "^1.3.2",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^4.13.19",
+    "next": "^9.1.6",
     "prop-types": "^15.6.2",
-    "react": "^16.9.0",
+    "react": "^16.12.0",
     "react-device-detect": "^1.7.5",
-    "react-dom": "^16.9.0",
+    "react-dom": "^16.12.0",
     "react-ga": "^2.7.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.3.1",
@@ -57,9 +58,7 @@
     "request": "^2.88.0",
     "styled-components": "^4.3.2",
     "uuid": "^3.3.3",
-    "web-push": "^3.3.5",
-    "webpack": "^3.6.0",
-    "workbox-webpack-plugin": "^4.3.1"
+    "web-push": "^3.3.5"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -72,8 +71,6 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
     "mocha": "^4.0.1",
-    "prettier": "^1.18.2",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.25.0"
+    "prettier": "^1.18.2"
   }
 }
