--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "scripts": {
     "seedSpaces": "source env.sh && node src/server/database/seedSpacesInfo.js",
     "test": "mocha --reporter spec",
-    "webpack": "webpack --watch",
-    "webpack-prod": "webpack -p",
     "lint": "eslint ./src/**/",
     "lint-server": "eslint ./src/server",
     "lint-fix": "eslint ./src/**/ --fix",
@@ -34,6 +32,7 @@
     "axios": "^0.19.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-inline-react-svg": "^1.1.0",
     "babel-plugin-styled-components": "^1.10.6",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
@@ -46,6 +45,7 @@
     "moment": "^2.24.0",
     "mongoose": "^4.13.19",
     "next": "^9.1.6",
+    "next-redux-wrapper": "^4.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.12.0",
     "react-device-detect": "^1.7.5",
