--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets" : ["next/babel"],
-  "plugins": ["babel-plugin-styled-components", "inline-react-svg"]
+  "plugins": [["styled-components", { "ssr": true }], "inline-react-svg"]
 }
