changes pages to typescript

--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "web-push": "^3.3.5"
   },
   "devDependencies": {
+    "@types/node": "^13.1.6",
+    "@types/react": "^16.9.17",
     "chai": "^4.1.2",
     "concurrently": "^4.1.2",
     "eslint": "^5.16.0",
@@ -71,6 +73,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
     "mocha": "^4.0.1",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "typescript": "^3.7.4"
   }
 }
