clean up code structure

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint ./src/**/",
     "lint-server": "eslint ./src/server",
     "lint-fix": "eslint ./src/**/ --fix",
-    "dev": "source env.sh && concurrently \"node index.js\"",
+    "dev": "source env.sh && concurrently \"node src/server/index.js\"",
     "build": "next build",
     "start": "source env.sh NODE_ENV=production node index.js"
   },
