Changed src/server/database/scripts/seedFoodTrucksInfo.js to update by default rather than deleting by default. Option to delete is now accessible with the --reset option. These are separate commands in the package.json (seedFoodtrucks vs resetFoodtrucks).

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack -p && node src/server/index.js",
     "seedSpaces": "source env.sh && node src/server/database/seedSpacesInfo.js",
     "seedFoodtrucks": "source env.sh && node src/server/database/seedFoodTrucksInfo.js",
+    "resetFoodtrucks": "source env.sh && node src/server/database/seedFoodTrucksInfo.js --reset",
     "test": "mocha --reporter spec",
     "webpack": "webpack --watch",
     "webpack-prod": "webpack -p",
