--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -3,7 +3,7 @@ image_tag: latest
 
 applications:
   - name: basics
-    image: pennlabs/pennbasics
+    image: pennlabs/penn-basics
     secret: basics
     extraEnv:
       - name: PORT
