--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pennlabs/pennbasics.git"
+    "url": "git+https://github.com/pennlabs/penn-basics.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/pennlabs/pennbasics/issues"
+    "url": "https://github.com/pennlabs/penn-basics/issues"
   },
-  "homepage": "https://github.com/pennlabs/pennbasics#readme",
+  "homepage": "https://github.com/pennlabs/penn-basics#readme",
   "dependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
