--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   "devDependencies": {
     "@types/node": "^13.1.6",
     "@types/react": "^16.9.17",
+    "@types/react-redux": "^7.1.6",
     "@types/styled-components": "^4.4.2",
     "chai": "^4.1.2",
     "concurrently": "^4.1.2",
