--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "passport-oauth": "^1.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.12.0",
+    "react-debounce-input": "^3.2.2",
     "react-device-detect": "^1.7.5",
     "react-dom": "^16.12.0",
     "react-ga": "^2.7.0",
