--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@svgr/webpack": "^4.3.3",
+    "@zeit/next-css": "^1.0.1",
+    "antd": "^3.26.7",
     "async": "^2.6.3",
     "axios": "^0.19.0",
     "babel-cli": "^6.26.0",
