--- a/package.json
+++ b/package.json
@@ -80,8 +80,10 @@
     "@types/passport": "^1.0.2",
     "@types/react": "^16.9.17",
     "@types/react-redux": "^7.1.6",
+    "@types/redux": "^3.6.0",
     "@types/request": "^2.48.4",
     "@types/styled-components": "^4.4.2",
+    "@types/uuid": "^3.4.7",
     "@types/web-push": "^3.3.0",
     "chai": "^4.1.2",
     "concurrently": "^4.1.2",
