--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/express": "^4.17.2",
     "@types/express-session": "^1.15.16",
     "@types/http-status-codes": "^1.2.0",
+    "@types/lodash": "^4.14.149",
     "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.7.0",
     "@types/next": "^9.0.0",
