--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/cheerio": "^0.22.16",
     "@types/express": "^4.17.2",
     "@types/express-session": "^1.15.16",
+    "@types/googlemaps": "^3.39.2",
     "@types/http-status-codes": "^1.2.0",
     "@types/lodash": "^4.14.149",
     "@types/moment": "^2.13.0",
