--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@types/passport": "^1.0.2",
     "@types/react": "^16.9.17",
     "@types/react-redux": "^7.1.6",
+    "@types/react-tooltip": "^3.11.0",
     "@types/request": "^2.48.4",
     "@types/styled-components": "^4.4.2",
     "@types/uuid": "^3.4.7",
