--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "seedFoodtrucks": "source env.sh && node src/server/database/scripts/seedFoodTrucksInfo.js",
     "resetFoodtrucks": "source env.sh && node src/server/database/scripts/seedFoodTrucksInfo.js --reset",
     "test": "mocha --reporter spec",
-    "lint": "eslint ./src/**/",
-    "lint-server": "eslint ./src/server",
-    "lint-fix": "eslint ./src/**/ --fix",
+    "lint": "eslint 'src/**/*.{ts,js,tsx,jsx}'",
+    "lint-fix": "eslint 'src/**/*.{ts,js,tsx,jsx}' --fix",
     "dev": "source env.sh && nodemon",
     "build": "next build && tsc --project tsconfig.server.json",
     "start": "source env.sh && node dist/index.js"
@@ -86,14 +85,17 @@
     "@types/styled-components": "^4.4.2",
     "@types/uuid": "^3.4.7",
     "@types/web-push": "^3.3.0",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
     "chai": "^4.1.2",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prefer-arrow": "^1.1.7",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "mocha": "^4.0.1",
     "nodemon": "^2.0.2",
     "passport-oauth": "^1.0.0",
