--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint 'src/**/*.{ts,js,tsx,jsx}'",
     "lint-fix": "eslint 'src/**/*.{ts,js,tsx,jsx}' --fix",
     "dev": "source env.sh && nodemon",
-    "build": "next build && tsc --project tsconfig.server.json",
+    "build": "next build",
     "start": "source env.sh && node server/index.js"
   },
   "repository": {
