--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint-fix": "eslint 'src/**/*.{ts,js,tsx,jsx}' --fix",
     "dev": "source env.sh && nodemon",
     "build": "next build",
-    "start": "source env.sh && node server/index.js"
+    "start": "source env.sh && ts-node --project tsconfig.server.json src/server/index.ts"
   },
   "repository": {
     "type": "git",
