--- a/package.json
+++ b/package.json
@@ -28,6 +28,24 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@svgr/webpack": "^4.3.3",
+    "@types/cheerio": "^0.22.16",
+    "@types/express": "^4.17.2",
+    "@types/express-session": "^1.15.16",
+    "@types/googlemaps": "^3.39.2",
+    "@types/http-status-codes": "^1.2.0",
+    "@types/lodash": "^4.14.149",
+    "@types/moment": "^2.13.0",
+    "@types/mongoose": "^5.7.1",
+    "@types/next": "^9.0.0",
+    "@types/node": "^13.7.1",
+    "@types/passport": "^1.0.2",
+    "@types/react": "^16.9.19",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-tooltip": "^3.11.0",
+    "@types/request": "^2.48.4",
+    "@types/styled-components": "^4.4.3",
+    "@types/uuid": "^3.4.7",
+    "@types/web-push": "^3.3.0",
     "@zeit/next-css": "^1.0.1",
     "antd": "^3.26.7",
     "async": "^2.6.3",
@@ -50,6 +68,7 @@
     "next": "^9.1.6",
     "next-redux-wrapper": "^4.0.1",
     "passport": "^0.4.0",
+    "passport-oauth": "^1.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.12.0",
     "react-debounce-input": "^3.2.2",
@@ -63,33 +82,14 @@
     "redux-thunk": "^2.2.0",
     "request": "^2.88.0",
     "styled-components": "^4.3.2",
-    "uuid": "^3.3.3",
-    "web-push": "^3.3.5",
     "ts-node": "^8.6.2",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "uuid": "^3.3.3",
+    "web-push": "^3.3.5"
   },
   "devDependencies": {
-    "@types/cheerio": "^0.22.16",
-    "@types/express": "^4.17.2",
-    "@types/express-session": "^1.15.16",
-    "@types/googlemaps": "^3.39.2",
-    "@types/http-status-codes": "^1.2.0",
-    "@types/lodash": "^4.14.149",
-    "@types/moment": "^2.13.0",
-    "@types/mongoose": "^5.7.0",
-    "@types/next": "^9.0.0",
-    "@types/node": "^13.1.6",
-    "@types/passport": "^1.0.2",
-    "@types/react": "^16.9.17",
-    "@types/react-redux": "^7.1.6",
-    "@types/react-tooltip": "^3.11.0",
-    "@types/request": "^2.48.4",
-    "@types/styled-components": "^4.4.2",
-    "@types/uuid": "^3.4.7",
-    "@types/web-push": "^3.3.0",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
-    "chai": "^4.1.2",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-import": "^2.18.2",
@@ -98,9 +98,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.3.0",
-    "mocha": "^4.0.1",
     "nodemon": "^2.0.2",
-    "passport-oauth": "^1.0.0",
     "prettier": "^1.19.1"
   }
 }
