--- a/.github/workflows/cdkactions_build-and-deploy.yaml
+++ b/.github/workflows/cdkactions_build-and-deploy.yaml
@@ -43,7 +43,7 @@ jobs:
           RELEASE_NAME=${REPOSITORY#*/}
 
           # Export RELEASE_NAME as an output
-          echo "::set-output RELEASE_NAME=$RELEASE_NAME"
+          echo "::set-output name=RELEASE_NAME::$RELEASE_NAME"
 
           yarn build
         env:
