--- a/.github/workflows/cdkactions_build-and-deploy.yaml
+++ b/.github/workflows/cdkactions_build-and-deploy.yaml
@@ -40,8 +40,7 @@ jobs:
           yarn install --frozen-lockfile
 
           # get repo name (by removing owner/organization)
-          RELEASE_NAME=${REPOSITORY#*/}
-          export RELEASE_NAME
+          export RELEASE_NAME=${REPOSITORY#*/}
 
           # Export RELEASE_NAME as an output
           echo "::set-output name=RELEASE_NAME::$RELEASE_NAME"
