--- a/k8s/package.json
+++ b/k8s/package.json
@@ -10,22 +10,21 @@
     "synth": "cdk8s synth",
     "compile": "tsc",
     "watch": "tsc -w",
+    "test": "jest",
     "build": "npm run compile && npm run synth",
     "upgrade": "npm i cdk8s@latest cdk8s-cli@latest",
     "upgrade:next": "npm i cdk8s@next cdk8s-cli@next"
   },
   "dependencies": {
-    "@pennlabs/kittyhawk": "^1.1.1",
-    "cdk8s": "^1.5.48",
-    "cdk8s-plus-22": "^1.0.0-beta.153",
-    "constructs": "^3.3.246"
+    "@pennlabs/kittyhawk": "^1.1.2",
+    "cdk8s": "^2.2.63",
+    "constructs": "^10.0.110"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
     "@types/node": "^14.18.12",
-    "cdk8s-cli": "^1.0.130",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.3"
   }
 }
