:boom: Update workflow files

--- a/.github/workflows/cdkactions_build-and-deploy.yaml
+++ b/.github/workflows/cdkactions_build-and-deploy.yaml
@@ -39,7 +39,7 @@ jobs:
           cd k8s
           yarn install --frozen-lockfile
 
-          # get repo name (by removing owner/organization)
+          # Get repo name (by removing owner/organization)
           export RELEASE_NAME=${REPOSITORY#*/}
 
           # Export RELEASE_NAME as an output
@@ -54,7 +54,50 @@ jobs:
         run: |-
           aws eks --region us-east-1 update-kubeconfig --name production --role-arn arn:aws:iam::${AWS_ACCOUNT_ID}:role/kubectl
 
-          # get repo name from synth step
+          # Get repo name from synth step
+          RELEASE_NAME=${{ steps.synth.outputs.RELEASE_NAME }}
+
+          # Deploy
+          kubectl apply -f k8s/dist/ -l app.kubernetes.io/component=certificate
+          kubectl apply -f k8s/dist/ --prune -l app.kubernetes.io/part-of=$RELEASE_NAME
+        env:
+          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.GH_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.GH_AWS_SECRET_ACCESS_KEY }}
+    needs: publish-publish
+  feature-branch-deploy:
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/heads/feat/') == true
+    steps:
+      - uses: actions/checkout@v2
+      - name: Get Pull Request Number
+        id: pr
+        run: echo "::set-output name=pull_request_number::$(gh pr view --json number -q .number || echo "")"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - id: synth
+        name: Synth cdk8s manifests
+        run: |-
+          cd k8s
+          yarn install --frozen-lockfile
+
+          # Get repo name (by removing owner/organization)
+          export IS_FEATURE_BRANCH=true
+          export RELEASE_NAME=${REPOSITORY#*/}-pr-${{ steps.pr.outputs.pull_request_number }}
+
+          # Export RELEASE_NAME as an output
+          echo "::set-output name=RELEASE_NAME::$RELEASE_NAME"
+
+          yarn build
+        env:
+          GIT_SHA: ${{ github.sha }}
+          REPOSITORY: ${{ github.repository }}
+          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
+      - name: Deploy
+        run: |-
+          aws eks --region us-east-1 update-kubeconfig --name production --role-arn arn:aws:iam::${AWS_ACCOUNT_ID}:role/kubectl
+
+          # Get repo name from synth step
           RELEASE_NAME=${{ steps.synth.outputs.RELEASE_NAME }}
 
           # Deploy
