--- a/.github/workflows/cdkactions_build-and-deploy.yaml
+++ b/.github/workflows/cdkactions_build-and-deploy.yaml
@@ -9,7 +9,7 @@ jobs:
     with:
       projectName: penn-basics
       imageName: pennlabs/penn-basics
-      path: frontend
+      path: .
     secrets:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
