:art: Skip React Checks

--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -9,6 +9,7 @@ jobs:
     with:
       projectName: penn-basics
       imageName: pennlabs/penn-basics
+      skipReactCheck: true
       path: .
     secrets:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
